--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,11 +4,10 @@
 # Required
 version: 2
 
-# Set the OS, Python version, and other tools you might need
-build:
-  os: ubuntu-24.04
-  tools:
-    python: "3.13"
+python:
+  version: "3.11.7"             # Specify the Python version
+  install:
+    - requirements: requirements.txt
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
