--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,18 +4,19 @@
 # Required
 version: 2
 
-python:
-  version: "3.11.7"             # Specify the Python version
-  install:
-    - requirements: requirements.txt
+build:
+  os: ubuntu-lts-latest
+  tools:
+    python:
+      version: "3.11.7"             # Specify the Python version
+      install:
+        - requirements: docs/requirements.txt
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
    configuration: docs/conf.py
 
-# Optionally, but recommended,
-# declare the Python requirements required to build your documentation
-# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-# python:
-#    install:
-#    - requirements: docs/requirements.txt
+formats:
+  - html
+  - pdf
+  - epub
