--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,8 +7,7 @@ version: 2
 build:
   os: ubuntu-lts-latest
   tools:
-    python:
-      version: "3.11"             # Specify the Python version
+    python:          # Specify the Python version
       install:
         - requirements: docs/requirements.txt
 
