--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,12 +4,15 @@
 # Required
 version: 2
 
+  
 build:
-  os: ubuntu-lts-latest
   tools:
-    python:          # Specify the Python version
-      install:
-        - requirements: docs/requirements.txt
+    python: "3.11"  # Specify Python version here
+
+python:
+  install:
+    - requirements: docs/requirements.txt  # Install dependencies from requirements.txt
+
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
